--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: eddie-bot
     restart: unless-stopped
     environment:
-      - TZ=UTC
+      - TZ=Europe/Berlin
     volumes:
       - ./.env.local:/app/.env.local
       - ./log.txt:/app/log.txt
