--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: eddie-bot
+    container_name: mensa-bot
     restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
     volumes:
-      - ./.env.local:/app/.env.local
-      - ./log.txt:/app/log.txt
-      - ./dailyChannels.csv:/app/dailyChannels.csv
+      - ./.env:/app/.env
