--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,4 @@ services:
     restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
-    volumes:
-      - ./.env:/app/.env
+      - MENSAPLUS_BOT_TOKEN=${DISCORD_TOKEN}
