--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: test-container
+    container_name: mensa-bot
     restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
